added animated logo and svg separtor to home page

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico?v=2">
 </head>
 <body>
     <div id="root"></div>
